// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": "35388",
        "title": "Tênis Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": "41872",
        "title": "Tênis Adidas AllStar",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when summary is called 1`] = `
Object {
  "formatted": "R$3,025.56",
  "items": Array [
    Object {
      "product": Object {
        "price": "35388",
        "title": "Tênis Adidas",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": "41872",
        "title": "Tênis Adidas AllStar",
      },
      "quantity": 3,
    },
  ],
  "total": Object {
    "amount": 302556,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
